fix: retirar z-index do forms

--- a/src/css/contatos.css
+++ b/src/css/contatos.css
@@ -26,7 +26,6 @@
   flex: 1;
   max-width: 700px;
   top: 5rem;
-  z-index: 10;
   width: 100%;
   height: auto;
 }
