--- a/src/css/projetos.css
+++ b/src/css/projetos.css
@@ -18,7 +18,7 @@
 
 .projects-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
   gap: 2rem;
   row-gap: 5rem;
   max-width: 90%;
